welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: not found: value a
    return a+b
           ^withoutDoubles:3: error: not found: value b
    return a+b
             ^