welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if (die1!=die2 ){
    return a+b
  }
  if (die1==6 & noDoubles){
    return 7
  }
  if (noDoubles){
    return 2*die1+1
  }
  return 2*die1
}